added actuator for health status